--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="./css/resources/style.css" type="text/css" rel="stylesheet">
     <meta charset="utf-8">
-    <title>Broadways</title>
+    <title>Broadway</title>
   </head>
   <body>
+    <div class="broadway">
     <h1>Broadway Design</h1>
       <p>Home</p>
       <p>About</p>
       <p>Work</p>
       <p>Team</p>
       <p>Contract</p>
+    </div>
 
     <h2>Our Process</h2>
       <h3>Identify</h3>
@@ -20,7 +23,7 @@
       <h3>Execute</h3>
         <p>We put everything we have into our work.</p>
 
-    <h2>Designed in New York</h2>
+    <div class="designed"><h2>Designed in New York</h2></div>
       <h3>Portfolio</h3>
         <p>Coming Soon</p>
       <h3>Team</h3>
@@ -30,6 +33,6 @@
         <p>E-mail: test@example.com</p>
         <p>Twitter: @test</p>
 
-<h2> © Broadway 2016 Home About Work Team Contact</h2>
+<div class="copyright"><h2> © Broadway 2016 Home About Work Team Contact</h2></div>
   </body>
 </html>
