--- a/index.html
+++ b/index.html
@@ -1,25 +1,29 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link href="./css/resources/style.css" type="text/css" rel="stylesheet">
+    <link href="./css/style.css" type="text/css" rel="stylesheet">
     <meta charset="utf-8">
     <title>Broadway</title>
   </head>
   <body>
     <div class="broadway">
     <h1>Broadway Design</h1>
-      <p>Home</p>
-      <p>About</p>
-      <p>Work</p>
-      <p>Team</p>
-      <p>Contract</p>
+
+      <a href="#"><p>Home</p></a>
+      <a href="#"><p>About</p></a>
+      <a href="#"><p>Work</p></a>
+      <a href="#"><p>Team</p></a>
+      <a href="#"><p>Contract</p></a>
     </div>
 
     <h2>Our Process</h2>
+    <p><img src="./css/resources/identify.svg"></p>
       <h3>Identify</h3>
         <p>We focus on the most important details.</p>
+      <p><img src="./css/resources/understand.svg"></p>
       <h3>Understand</h3>
         <p>We study our projects inside and out</p>
+      <p><img src="./css/resources/execute.svg"></p>
       <h3>Execute</h3>
         <p>We put everything we have into our work.</p>
 
@@ -33,6 +37,6 @@
         <p>E-mail: test@example.com</p>
         <p>Twitter: @test</p>
 
-<div class="copyright"><h2> © Broadway 2016 Home About Work Team Contact</h2></div>
+<div class="copyright"><h2> © Broadway 2016 <a href="#">Home</a> <a href="#">About</a> <a href="#">Work</a> <a href="#">Team</a> <a href="#">Contact</a></h2></div>
   </body>
 </html>
